# quads-client

./: .codecov.yml  .coveragerc  .flake8  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: codecov.yml  pytest.yml  semantic-release.yml  sync-back.yml  validate-pr.yml
conf/: quads-client.yml.example
desktop/: quads-client-gui.desktop
rpm/: quads-client.spec
rpms/: quads-client-1.0.0-1.fc42.src.rpm
rpms/noarch/: quads-client-1.0.0-1.fc42.noarch.rpm
src/quads_client/: arg_parser.py  auth.py  config.py  connection.py  error_handler.py  history.py  progress.py  rich_console.py  session_manager.py  shell.py  utils.py
src/quads_client/cli/: __init__.py  main.py
src/quads_client/commands/: __init__.py  available.py  cloud.py  cloud.py.bak  connection.py  host.py  moves.py  schedule.py  server.py  session.py  ssm.py  track.py  user.py  version.py
src/quads_client/gui/: __init__.py  __main__.py  main.py  theme.py
src/quads_client/gui/assets/: __init__.py  quads-client-gui.icns
src/quads_client/gui/controllers/: __init__.py  gui_shell.py
src/quads_client/gui/views/: __init__.py  admin_schedule.py  assignments.py  available.py  clouds.py  connection.py  hosts.py  moves.py  my_hosts.py  onboarding.py  preferences.py  schedule.py  settings.py
src/quads_client/gui/widgets/: __init__.py  base.py  date_picker.py  dialogs.py  host_filters.py
tests/: README.md  __init__.py  conftest.py  test_arg_parser.py  test_cli_oneshot.py  test_commands_available.py  test_commands_cloud.py  test_commands_cloud_assignments.py  test_commands_cloud_phase1.py  test_commands_connection.py  test_commands_connection_extended.py  test_commands_host.py  test_commands_moves.py  test_commands_programmatic.py  test_commands_schedule.py  test_commands_server.py  test_commands_session.py  test_commands_ssm.py  test_commands_ssm_phase2.py  test_commands_unified_schedule.py  test_commands_user.py  test_commands_user_extended.py  test_commands_user_phase2.py  test_config.py  test_connection.py  test_connection_extended.py  test_connection_fuzzy_match.py  test_error_handler.py  test_gui_shell.py  test_registration_flow.py  test_rich_console.py  test_schedule_admin_enhanced.py  test_schedule_coverage_boost.py  test_schedule_ls_schedule.py  test_servers_no_auth.py  test_session_manager.py  test_shell_autocomplete.py  test_shell_extended.py  test_utils.py  test_utils_ssl.py
tests/gui/: test_admin_schedule_validation.py  test_gui_shell_os.py  test_host_filters.py  test_schedule_validation.py
