[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quads-client"
version = "0.3.2"
description = "QUADS Client is an interactive TUI (Text User Interface) shell for managing multiple QUADS server instances."
readme = "README.md"
requires-python = ">=3.13"
license = {file = "LICENSE"}
authors = [
    {name = "Will Foster", email = "wfoster@redhat.com"}
]
dependencies = [
    "cmd2>=2.0.0",
    "quads-lib>=0.1.9",
    "PyYAML>=6.0.0",
    "argcomplete>=3.1.2",
    "tabulate>=0.9.0",
    "rich>=13.0.0",
    "PyJWT>=2.8.0",
    "requests>=2.31.0"
]

[project.optional-dependencies]
dev = [
    "black==24.4.2",
    "flake8"
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "coverage"
]

[project.scripts]
quads-client = "quads_client.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

# --- Semantic Release Configuration ---
[tool.semantic_release]
version_variables = [
    "src/quads_client/__init__.py:__version__"
]
version_toml = [
    "pyproject.toml:project.version"
]
branch = "main"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install build && python -m build"
commit_parser = "angular"

# --- Black Configuration ---
[tool.black]
line-length = 119
target-version = ['py313']
exclude = '''
/(
    \.git
  | \.eggs
  | \.pytest_cache
  | __pycache__
  | build
  | dist
  | htmlcov
  | rpms
  | \.claude
  | venv
  | env
  | \.venv
)/
'''
