[metadata]
name = quads-client
version = 1.0.0
description = QUADS Client TUI Shell
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
url = https://quads.dev
python_requires = >=3.13

[options]
packages = find:
package_dir =
    = src
install_requires =
    cmd2 >= 2.0.0
    quads-lib >= 0.1.9
    argcomplete >= 3.1.2
    tabulate >= 0.9.0
    PyYAML >= 6.0.0

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest >= 7.0.0
    pytest-cov >= 4.0.0
    pytest-mock >= 3.10.0
    coverage >= 7.0.0
dev =
    black >= 23.0.0
    flake8 >= 6.0.0
    %(test)s

[options.entry_points]
console_scripts =
    quads-client = quads_client.cli.main:main
